--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             <input type="text" id="user-guess" name="user-guess"><br><br>
             <input type="submit" value="Guess">
         </form>
+        <dl>
+            <dt>Current Secret Word:</dt>
+            <dd id="secretWordUnderscore"></dd>
+            <dt>Chances:</dt>
+            <dd id="guessChances"></dd>
+            <dt>Previous Guesses:</dt>
+            <dd id="previousGuesses"></dd>
+        </dl>
     </main>
     
     <footer>&copy; Krisztina Pap, 2020</footer>
