--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
         <dl>
             <dt>Current Secret Word:</dt>
-            <dd id="secretWordUnderscore"></dd>
+            <dd id="secretWordUnderscoreSpot"></dd>
             <dt>Chances:</dt>
             <dd id="guessChances"></dd>
             <dt>Previous Guesses:</dt>
