Fixes bug where hangman pictures didn't update;

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <dt>Previous Guesses:</dt>
             <dd id="previousGuesses"></dd>
         </dl>
+        <image id="hangmanSpot"></image>
     </main>
     
     <footer>&copy; Krisztina Pap, 2020</footer>
