--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Normalize.css -->
     <link rel="stylesheet" href="css/normalize.css">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Lato&display=swap" rel="stylesheet"> 
+
     <link rel="stylesheet" href="css/main.css">
 
     <script src="js/scripts.js" defer></script>
@@ -27,14 +30,17 @@
         <dl>
             <dt>Current Secret Word:</dt>
             <dd id="secretWordUnderscoreSpot"></dd>
-            <dt>Chances:</dt>
-            <dd id="guessChances"></dd>
             <dt>Previous Guesses:</dt>
             <dd id="previousGuesses"></dd>
+            <dt>Chances:</dt>
+            <dd id="guessChances"></dd>
+          
         </dl>
         <image id="hangmanSpot"></image>
     </main>
     
-    <footer>&copy; Krisztina Pap, 2020</footer>
+    <footer>
+        Website &copy; Krisztina Pap, 2020; Images &copy; Lindsey Graham
+    </footer>
 </body>
 </html>
