Adds form reset between guesses and focuses on user input field;

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form id="guess-form" action="#">
             <label for="user-guess">Enter a letter:</label><br>
             <input type="text" id="user-guess" name="user-guess"><br><br>
-            <input type="submit" value="Guess">
+            <input type="submit" value="Guess" onclick="focusUserInput()">
         </form>
         <dl>
             <dt>Current Secret Word:</dt>
